remove organizations add alternatives page enhance readme
